@@ -4,8 +4,8 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>otus.moryakovdv.meteoservice</groupId>
-	<artifactId>meteoServices</artifactId>
+	<artifactId>meteoservices</artifactId>
+	<packaging>jar</packaging>
 
 	<parent>
 		<groupId>otus.moryakovdv</groupId>
@@ -19,34 +19,63 @@
 
 	<dependencies>
 
-
-		<dependency>
-			<groupId>otus.moryakovdv.meteoservice</groupId>
-			<artifactId>meteohelpers</artifactId>
-			<version>0.0.1</version>
-		</dependency>
-		
-
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-amqp</artifactId>
-			
-
 		</dependency>
+
 
 	</dependencies>
 
 	<build>
 		<finalName>meteo-services</finalName>
-
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>repackage</id>
+						<configuration>
+							<classifier>exec</classifier>
+						</configuration>
+					</execution>
+				</executions>
 				<configuration>
-					<mainClass>otus.moryakovdv.meteoservices.WebApplication</mainClass>
+					<jvmArguments>--add-opens java.base/java.util=ALL-UNNAMED</jvmArguments>
 				</configuration>
 			</plugin>
+			
+			
+		
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<argLine>
+						--add-opens=java.base/java.util=ALL-UNNAMED
+					</argLine>
+				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-failsafe-plugin</artifactId>
+				<executions>
+					<execution>
+						<goals>
+							<goal>integration-test</goal>
+							<goal>verify</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+
+					<argLine>--add-opens=java.base/java.util=ALL-UNNAMED</argLine>
+				</configuration>
+			</plugin>
+
 
 		</plugins>
 
